--- a/Convenience_POS_System/pom.xml
+++ b/Convenience_POS_System/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>tomcat-jdbc</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
