--- a/Convenience_POS_System/pom.xml
+++ b/Convenience_POS_System/pom.xml
@@ -65,6 +65,17 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+
     </dependencies>
 
     <build>
