--- a/Convenience_POS_System/src/main/resources/application.properties
+++ b/Convenience_POS_System/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.main.allow-bean-definition-overriding=true
 server.servlet.session.tracking-modes=cookie
+
+logging.level.root=info
+
+logging.logback.rollingpolicy.max-file-size=1MB
+logging.file.name=logs/POS.log
+logging.logback.rollingpolicy.file-name-pattern=${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
